# binance-history

./: .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: publish.yml  test.yml  tests.yml
binance_history/: __init__.py  _klines.py  _utils.py  api.py  cli.py  config.py  constants.py  exceptions.py  hello.py  klines.py  utils.py
docs/source/: conf.py  index.rst
tests/: conftest.py  test_api.py  test_cli.py  test_hello.py  test_klines.py  test_utils.py
