[tool.poetry]
name = "binance-history"
version = "0.1.1"
description = "Fetch binance historical klines or trades easily."
authors = ["Meng Xiangzhuo <aumo@foxmail.com>"]
readme = "README.rst"
packages = [{ include = "binance_history" }]
license = "MIT"
homepage = "https://github.com/xzmeng/binance-history"
repository = "https://github.com/xzmeng/binance-history"
documentation = "https://github.com/xzmeng/binance-history"
keywords = ["crypto", "cryptocurrency", "backtest", "backtesting", "BTC", "binance"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.1"
pandas = "^1.5.2"
loguru = "^0.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
